fix:course detail alignmnet and footer in calendar

--- a/src/app/learner/pages/coursedetails/coursedetails.component.scss
+++ b/src/app/learner/pages/coursedetails/coursedetails.component.scss
@@ -1536,6 +1536,15 @@ border-right: none !important;
 .drawerClsResource {
     width: 100%;
 }
+
+
+.drawerOpnAss{
+    width: 74%;
+    margin-left: 3%;
+}
+.drawerClsAss{
+width: 100%;
+}
 .drawerOpnForum{
     margin-left: 3%;
     width: 74%;
